feat: added SaveGameData.SaveGame.StoredTrucks
... as preprocessed data for SaveGameDataPanel.StoredTrucksTableModel